samples/_failures_safe/1761071017_afb3c9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_909d6b5d.c: In function ‘main’:
./samples/SAFE/__tmp_909d6b5d.c:175:21: error: expected ‘]’ at end of input
  175 |         if (tokens[k
      |                     ^
      |                     ]
./samples/SAFE/__tmp_909d6b5d.c:175:13: error: used struct type value where scalar is required
  175 |         if (tokens[k
      |             ^~~~~~
./samples/SAFE/__tmp_909d6b5d.c:175:9: error: expected declaration or statement at end of input
  175 |         if (tokens[k
      |         ^~
./samples/SAFE/__tmp_909d6b5d.c:175:9: error: expected declaration or statement at end of input
